// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic heading 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  font-weight: bold;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c2 + .sub-heading {
  margin-top: -1rem;
}

.c2:last-child {
  margin-bottom: 0;
}

h1.c2 {
  font-size: 3rem;
}

h2.c2 {
  font-size: 2.5rem;
}

h3.c2 {
  font-size: 2rem;
}

h4.c2 {
  font-size: 1.5rem;
}

h5.c2 {
  font-size: 1.25rem;
}

h6.c2 {
  font-size: 1rem;
}

@media (max-width:480px) {
  h1.c2 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c2 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c2 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c2 {
    font-size: 1.2rem;
  }
}

<div
  class="c0 c1"
>
  <h1
    class="heading c2 c1"
  >
    test
  </h1>
</div>
`;

exports[`renders correctly for a heading of a different element 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  font-weight: bold;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c2 + .sub-heading {
  margin-top: -1rem;
}

.c2:last-child {
  margin-bottom: 0;
}

h1.c2 {
  font-size: 3rem;
}

h2.c2 {
  font-size: 2.5rem;
}

h3.c2 {
  font-size: 2rem;
}

h4.c2 {
  font-size: 1.5rem;
}

h5.c2 {
  font-size: 1.25rem;
}

h6.c2 {
  font-size: 1rem;
}

@media (max-width:480px) {
  h1.c2 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c2 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c2 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c2 {
    font-size: 1.2rem;
  }
}

<div
  class="c0 c1"
>
  <h3
    class="heading c2 c1"
  >
    test
  </h3>
</div>
`;

exports[`renders correctly for a heading with a subheading 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  font-weight: bold;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c2 + .sub-heading {
  margin-top: -1rem;
}

.c2:last-child {
  margin-bottom: 0;
}

h1.c2 {
  font-size: 3rem;
}

h2.c2 {
  font-size: 2.5rem;
}

h3.c2 {
  font-size: 2rem;
}

h4.c2 {
  font-size: 1.5rem;
}

h5.c2 {
  font-size: 1.25rem;
}

h6.c2 {
  font-size: 1rem;
}

.c3 {
  font-weight: bold;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c3 + .sub-heading {
  margin-top: -1rem;
}

.c3:last-child {
  margin-bottom: 0;
}

h1.c3 {
  font-size: 3rem;
}

h2.c3 {
  font-size: 2.5rem;
}

h3.c3 {
  font-size: 2rem;
}

h4.c3 {
  font-size: 1.5rem;
}

h5.c3 {
  font-size: 1.25rem;
}

h6.c3 {
  font-size: 1rem;
}

.c3 {
  font-weight: 500;
}

@media (max-width:480px) {
  h1.c2 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c2 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c2 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c2 {
    font-size: 1.2rem;
  }
}

@media (max-width:480px) {
  h1.c3 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c3 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c3 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c3 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c3 {
    font-size: 1.2rem;
  }
}

<div
  class="c0 c1"
>
  <div>
    <h3
      class="heading c2 c1"
    >
      heading
    </h3>
    <h5
      class="sub-heading c3 c1"
    >
      subheading
    </h5>
  </div>
</div>
`;

exports[`renders correctly for a subheading 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  color: #435a6f;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #7467c0;
  outline-offset: 2px;
}

.c2 {
  font-weight: bold;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c2 + .sub-heading {
  margin-top: -1rem;
}

.c2:last-child {
  margin-bottom: 0;
}

h1.c2 {
  font-size: 3rem;
}

h2.c2 {
  font-size: 2.5rem;
}

h3.c2 {
  font-size: 2rem;
}

h4.c2 {
  font-size: 1.5rem;
}

h5.c2 {
  font-size: 1.25rem;
}

h6.c2 {
  font-size: 1rem;
}

.c2 {
  font-weight: 500;
}

@media (max-width:480px) {
  h1.c2 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c2 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c2 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c2 {
    font-size: 1.2rem;
  }
}

<div
  class="c0 c1"
>
  <h3
    class="sub-heading c2 c1"
  >
    test
  </h3>
</div>
`;
